[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apitwitter"
version = "1.0.0"
description = "Python SDK for the ApiTwitter REST API — Twitter/X data access"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "ApiTwitter", email = "support@apitwitter.com"}]
keywords = ["twitter", "api", "sdk", "x", "tweets", "social-media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://apitwitter.com"
Documentation = "https://docs.apitwitter.com"
Repository = "https://github.com/apitwitter/python-sdk"

[tool.setuptools.packages.find]
include = ["apitwitter*"]
